Upgraded to Java 21